2001-03-02  Seth Nickell  <seth@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	* libnautilus-extensions/nautilus-volume-monitor.c:

	Add UFS detection code to make Trash work on Solaris. Basically
	a cut and paste of the equivalent ReiserFS code added earlier.
	
2001-03-02  Pavel Cisler  <pavel@eazel.com>

	reviewed by: Gene Z. Ragan <gzr@eazel.com>

	* libnautilus-extensions/nautilus-volume-monitor.c:
	Turn off spew about unknown file systems.

2001-03-02  Eskil Heyn Olsen  <eskil@eazel.com>

	written by: Robey Pointer  <robey@eazel.com>
	reviewed by: Eskil Heyn Olsen  <eskil@eazel.com>

	This is a patch to debug output only.
	
	* components/services/install/lib/eazel-package-system-types.c:
	(packagedata_dump_tree_helper), (packagedata_dump_tree_int),
	(packagedata_dump_tree):
	Don't log dependencies for broken packages in debug output.

2001-03-02  Eskil Heyn Olsen  <eskil@eazel.com>

	reviewed by: Robey Pointer  <robey@eazel.com> who sez "that's
	nice..."

	Fixed 7245.

	* components/rpmview/nautilus-rpm-view-install.c:
	(get_detailed_errors), (nautilus_rpm_view_install_failed),
	(nautilus_rpm_view_uninstall_failed),
	(nautilus_rpm_view_install_done),
	(nautilus_rpm_view_install_package_callback),
	(nautilus_rpm_view_uninstall_package_callback):
	Fixed 7245, install view uses EazelInstallProblem to generate
	error strings.
	No longer call load_failed when done.
	Do gnome_dialog_run instead of gnome_dialog_run_and_close and lets
	hope it's not fatal...
	
	* components/services/install/command-line/Makefile.am:
	* components/services/install/command-line/eazel-alt-install-corba.
	c: (eazel_download_progress_signal),
	(eazel_install_progress_signal), (main):
	Fixed some math stuff that could cause arithmetic coredumps.
	Added i18n initialization code.

2001-03-02  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	Bug 2673 - Need to hook up the new font picker to nautilus .
	
	* configure.in: