@@ -1,3 +1,12 @@
+2001-03-02  Ramiro Estrugo  <ramiro@eazel.com>
+
+	reviewed by: Pavel Cisler <pavel@eazel.com>
+
+	* libnautilus-extensions/nautilus-font-manager.c:
+	(nautilus_font_manager_get_fallback_font):
+	Add workaround for tinderbox lack of 'make install' problem.  Ill
+	fix this better tommorow.
+	
 2001-03-02  Seth Nickell  <seth@eazel.com>
 
 	reviewed by: Pavel Cisler <pavel@eazel.com>
